# mxd

./: AUTHORS  Doxyfile  Makefile.in  acinclude.m4  aclocal.m4  configure  configure.in  configure.in.in  mxd.kdevelop  mxd.kdevelop.pcs  mxd.kdevses  mxd.tdevelop
admin/: acinclude.m4.in
doc/: Makefile.am  Makefile.in
doc/en/: Makefile.am  Makefile.in  index.docbook
po/: Makefile.am  Makefile.in  mxd.pot  zh_CN.po
src/: Makefile.am  Makefile.in  main.cpp  mxd.cpp  mxd.desktop  mxd.h  mxd.lsm  mxdconfigureuibase.ui  mxdui.rc  rppppoek.sh  settingdialog.cpp  settingdialog.h  statistics.cpp  statistics.h  statisticsbase.ui
src/pics/: Makefile.am  Makefile.in
